add sound endpoint
